--- a/android/app/src/main/res/values-night/colors.xml
+++ b/android/app/src/main/res/values-night/colors.xml
@@ -4,5 +4,5 @@
     <color name="icCls2">#54c5f8</color>
     <color name="icCls3">#29b6f6</color>
     <color name="icCls4">#19a6e6</color>
-    <color name="ic_launcher_background">#1d2024</color>
+    <color name="ic_launcher_background">#0b0e13</color>
 </resources>
